--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,18 @@ jobs:
               userId: ${{ secrets.METRICS_USER_ID }},
               url: '${{ secrets.METRICS_URL }}',
               apiKey: '${{ secrets.METRICS_API_KEY }}',
-            },  
+            },
+            logging:    {
+              source: 'jwt-pizza-service',
+              userId: ${{ secrets.LOGGING_USER_ID }},
+              url: '${{ secrets.LOGGING_URL }}',
+              apiKey: '${{ secrets.LOGGING_API_KEY }}',
+            },
           };" > src/config.js
+
+      - name: Tests
+        run: npm test
+        continue-on-error: true
 
       - name: set version
         id: set_version
@@ -99,64 +109,6 @@ jobs:
         with:
           name: package
           path: dist/
-
-      - name: Write config file
-        run: |
-          echo "module.exports = {
-            jwtSecret: '${{ secrets.JWT_SECRET }}',
-            db: {
-              connection: {
-                host: '127.0.0.1',
-                user: 'root',
-                password: 'tempdbpassword',
-                database: 'pizza',
-                connectTimeout: 60000,
-              },
-              listPerPage: 10,
-            },
-            factory: {
-              url: 'https://pizza-factory.cs329.click',
-              apiKey: '${{ secrets.FACTORY_API_KEY }}',
-            },
-            metrics: {
-              source: 'jwt-pizza-service',
-              userId: ${{ secrets.METRICS_USER_ID }},
-              url: '${{ secrets.METRICS_URL }}',
-              apiKey: '${{ secrets.METRICS_API_KEY }}',
-            },            
-          };" > src/config.js
-
-          - name: Write config file
-          run: |
-            echo "module.exports = {
-              jwtSecret: '${{ secrets.JWT_SECRET }}',
-              db: {
-                connection: {
-                  host: '127.0.0.1',
-                  user: 'root',
-                  password: 'tempdbpassword',
-                  database: 'pizza',
-                  connectTimeout: 60000,
-                },
-                listPerPage: 10,
-              },
-              factory: {
-                url: 'https://pizza-factory.cs329.click',
-                apiKey: '${{ secrets.FACTORY_API_KEY }}',
-              },
-              metrics: {
-                source: 'jwt-pizza-service',
-                userId: ${{ secrets.METRICS_USER_ID }},
-                url: '${{ secrets.METRICS_URL }}',
-                apiKey: '${{ secrets.METRICS_API_KEY }}',
-              },
-              logging:    {
-                source: 'jwt-pizza-service',
-                userId: ${{ secrets.LOGGING_USER_ID }},
-                url: '${{ secrets.LOGGING_URL }}',
-                apiKey: '${{ secrets.LOGGING_API_KEY }}',
-              },
-            };" > src/config.js
 
   deploy:
     runs-on: ubuntu-latest
